--- a/flaskr/templates/notice/notice.html
+++ b/flaskr/templates/notice/notice.html
@@ -105,15 +105,15 @@
   </script>
  <!--하단 네비게이션-->
  <nav class="bottom-nav">
-  <a href="home/home" class="nav-item">
+  <a href="/" class="nav-item">
     <span>홈</span>
   </a>
 
-  <a href="notice/notice" class="nav-item active">
+  <a href="/notice" class="nav-item active">
     <span>공지</span>
   </a>
 
-  <a href="alert/alert" class="nav-item">
+  <a href="/alert" class="nav-item">
     <span>알림</span>
   </a>
 
@@ -121,7 +121,7 @@
     <span>수행</span>
   </a>
 
-  <a href="study/study" class="nav-item">
+  <a href="/study" class="nav-item">
     <span>학습</span>
   </a>
 </nav>
