--- a/flaskr/templates/home/home.html
+++ b/flaskr/templates/home/home.html
@@ -53,11 +53,11 @@
 
     <!-- 하단 네비게이션 -->
     <nav class="bottom-nav">
-      <a href="home/home.html" class="nav-item active"><span>홈</span></a>
+      <a href="/" class="nav-item active"><span>홈</span></a>
       <a href="/notice" class="nav-item"><span>공지</span></a>
-      <a href="alert/alert.html" class="nav-item"><span>알림</span></a>
+      <a href="/alert" class="nav-item"><span>알림</span></a>
       <a href="/task" class="nav-item"><span>수행</span></a>
-      <a href="study/study.html" class="nav-item"><span>학습</span></a>
+      <a href="/study" class="nav-item"><span>학습</span></a>
     </nav>
 
     <script src="script.js"></script>
