--- a/flaskr/templates/home/home.html
+++ b/flaskr/templates/home/home.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="mypage">
-        <a href="mypage/mypage" class="mypage">
+        <a href="/mypage" class="mypage">
           <img src="profile-icon.png" alt="마이페이지" class="profile-icon" />
         </a>
       </div>
@@ -28,7 +28,7 @@
       <div class="card">
         <p class="card-title">TODAY</p>
         <p class="card-text">
-          오늘은 <span id="today-day">{{date}}</span>일 입니다
+          오늘은 <span id="today-day">{{day}}</span>일 입니다
         </p>
         <div class="card-row">
           <div class="mini-card">📌 수행 <span id="task-count">0</span>개</div>
