--- a/flaskr/templates/notice/notice.html
+++ b/flaskr/templates/notice/notice.html
@@ -22,7 +22,7 @@
     <h1 class="header-title">공지</h1>
 
     <div class="header-right">
-      <a href="mypage/mypage">
+      <a href="mypage">
         <img src="mypage.png" alt="마이페이지" class="mypage-icon">
       </a>
     </div>
