--- a/flaskr/templates/task/task.html
+++ b/flaskr/templates/task/task.html
@@ -19,7 +19,7 @@
       <h1 class="header-title">수행평가</h1>
 
       <div class="header-right mypage">
-        <a herf="mypage/mypage" class="mypage">
+        <a herf="mypage" class="mypage">
           <img src="profile-icon.png" alt="마이페이지" class="profile-icon" />
         </a>
       </div>
